[package]
name = "param_tuner"
version = "0.1.0"
authors = ["Tyler Weaver <maybe@tylerjw.dev>"]
edition = "2021"
rust-version = "1.68"


[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
rclrs = "*"
std_msgs = "*"
