<package format="3">
  <name>param_tuner</name>
  <version>0.1.0</version>
  <description>Parameter Tuner App</description>
  <maintainer email="maybe@tylerjw.dev">Tyler Weaver</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
